<b>Bekannte Fehler:</b>
<ul>
    <li>[<span style="color: #e21af3">BUG</span>] Chrome/Edge Chromium: Bei einigen MP4-Dateien kann kein Audio abgespielt werden. Der Button für die Lautstärke ist ausgegraut. Vermutlich Audio-Codec-Problem.</li>
    <li>[<span style="color: #e21af3">BUG</span>] Chrome/Edge Chromium: Eingabefelder über einem Video-Element können nicht bedient werden.</li>
</ul>
<b>Version 1.322</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Cursor-Style bei Links angepasst.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Das erstellen der relativen Pfade mittels updateData.exe, konnte unter gewissen Umständen fehlerhaft sein.</li>
</ul>
<b>Version 1.321</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Zeilenumbrüche in Feedbacknachrichten werden nun korrekt übermittelt.</li>
</ul>
<b>Version 1.32</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Hervorhebungen in Hilfeseite hinzugefügt.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Anpassung der Eingabefelder des Lizenzschlüssels.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Hilfe für die Browsereinstellungen für Chome / Firefox hinzugefügt.</li>
</ul>
<b>Version 1.311</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Autoplaysymbol wurde nach Ablaufen der Anzahl Autoplay nicht entfernt.</li>
</ul>
<b>Version 1.31</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Wenn bei betrachtung eines Bildes Autoplay aktiviert wurde, musste man erst das Bild wechseln, bevor die Autoplayfunktion gegriffen hat.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Höhe des Mediencontainers angepasst, damit das Untermenü überdeckt wird.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Ob Autoplay aktiviert ist, wird nun unterhalb des Mediums mittels des Autoplay-Icons angezeigt.</li>
    <li>[<span style="color: red">FEATURE</span>] Vollbildmodus hinzugefügt.</li>