@@ -206,10 +206,6 @@
             </form>
             <a class="button" id="saveSerialButton" onclick="saveLicenseKey()">Speichern</a>
         </div>
-<!-- 
-        <a id="helpLink" onclick="openHelp()">
-            <div id="helpField"></div>
-        </a> -->
     </div>
     <div id="navigation">
         <ul id="submenu" class="submenu"></ul>
