@@ -1,7 +1,11 @@
 <b>Bekannte Fehler:</b>
 <ul>
     <li>[<span style="color: #e21af3">BUG</span>] Chrome/Edge Chromium: Bei einigen MP4-Dateien kann kein Audio abgespielt werden. Der Button für die Lautstärke ist ausgegraut. Vermutlich Audio-Codec-Problem.</li>
-    <li>[<span style="color: #e21af3">BUG</span>] Chrome/Edge Chromium: Eingabefelder über einem Video-Element können nicht bedient werden.</li>
+    <li>[<span style="color: #e21af3">BUG</span>] Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</li>
+</ul>
+<b>Version 1.323</b>:<br>
+<ul>
+    <li>[<span style="color: red"><b>HOTFIX</b></span>] Chrome/Edge Chromium: Eingabefelder über einem Video-Element können nicht bedient werden.</li>
 </ul>
 <b>Version 1.322</b>:<br>
 <ul>
@@ -71,7 +75,6 @@
 <b>Version 1.28</b>:<br>
 <ul>
     <li>[<span style="color: #e21af3">BUG</span>] <s>Erstes Element eines Ordners kann nicht mittels Autoplay gestartet werden.</s></li>
-    <li>[<span style="color: #e21af3">BUG</span>] <s>Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</s></li>
     <li>[<span style="color: red">FEATURE</span>] Einstellungsmenü hinzugefügt zum Manipulieren der Autoplay-Werte und zur Fehlerbehebung.</li>
     <li>[<span style="color: red">FEATURE</span>] Autoplayfunktion eingefügt zum automatischen Abspielen von Medieninhalten (z.B. Diashow)</li>
     <li>[<span style="color: red">FEATURE</span>] Vor- und Zurück-Buttons benötigen kein neues Laden sofern die Medien im selben Ordner sind</li>
